cabal-version: 2.4
name: kosmikus-lh-tut
version: 0.1.0.0

-- https://www.haskell.org/cabal/users-guide/developing-packages.html#pkg-field-data-files
data-files:


library
  hs-source-dirs:       lib
  exposed-modules:      Paths_kosmikus_lh_tut
                      , Lib
                      , Sec1
                      , Sec2
  build-depends:        liquidhaskell, liquid-base, containers
  default-language:     Haskell2010
  ghc-options:          -fplugin=LiquidHaskell


executable tut
  main-is:              Main.hs
  build-depends:        base, kosmikus-lh-tut
  default-language:     Haskell2010
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N


test-suite tut_test
  main-is:              Doctest.hs
  build-depends:        base, kosmikus-lh-tut, doctest, QuickCheck
  default-language:     Haskell2010
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  type:                 exitcode-stdio-1.0
